--- a/views/style.css
+++ b/views/style.css
@@ -264,6 +264,13 @@ a:hover{
         margin-left: 10%;
         font-size: 0.8em;
     }
+
+
+    .content{
+        width:90%;
+        margin: 0 auto;
+    }
+
 }
 
 @media only screen and (max-width: 900px) {
@@ -326,8 +333,6 @@ a:hover{
     .about-cont h2{
         font-size: 0.9em; 
     }
-
-
     .about-cont{
         margin-top:15%;
     } 
