--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,9 +139,24 @@
 
 	<h1 id="projectsTitle">Projects</h1>
 	</div>
-	
 
 	<section class="projects d-flex one">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?export=view&id=1hJ9qaBb1zg4z6zPIjmXdGux3a9yBqu18" alt="Refound"/>
+			<h2>Refound</h2>
+			<p class="serif" style="margin-bottom:2px;"> May 2022 - </p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For Activate x Wormhole 2022, my team and I build an NFT platform for war time journalists that are facing lack of compensation, and safety concerns. We won the Rebuild for Ukraine Bounty awarded by the NEAR protocol, and at <a href="https://web3athon.xyz/" target="_blank">Web3athon</a> we won 3rd Place for the Celo Disaster Relief bounty. I worked on the frontend, and Solidity smart contracts.</p>
+			
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.refound.app" target="_blank" class="view-button"> View Website </a>
+			</div>
+			<div class="row">
+				<a href="https://www.coindesk.com/layer2/2022/10/14/refound-journalism-selling-nfts-to-help-photojournalists/" target="_blank" class="view-button"> CoinDesk Article </a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/002/018/361/datas/medium.png" alt="Alphabet Spaces"/>
 			<h2>Alphabet Spaces</h2>
@@ -149,18 +164,6 @@
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For <a href="https://pridehacksii.devpost.com/">MLH Pride Hacks 2</a>, I built a decentralized social media platform for LGBTQ+ people to find Safe Spaces and meet other people in the community. Users and followers functionality is handled by DeSo, Spaces are handled in firebase, and the front-end is React. Won the Prize for Best Use of <a href="https://www.deso.org/">DeSo.</a></p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.alphabetspaces.co" target="_blank" class="view-button"> View Website </a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1zyNQEfFu1Ya7y_Nh5_SCX32Uk8RuFNSE" alt="Refound"/>
-			<h2>Refound</h2>
-			<p class="serif" style="margin-bottom:2px;"> May 2022 </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For Activate x Wormhole 2022, my team and I build an NFT platform for journalists that are struggling to get their content out there and struggling to be compensated. Won the Rebuild for Ukraine Bounty awarded by the NEAR protocol. I worked on the coinbase wallet, donations functionality, and NFT contracts.</p>
-			<div class="row" style="margin-bottom:5px;">
-				<a href="https://www.refound.app" target="_blank" class="view-button"> View Website </a>
 			</div>
 		</div>
 	</section>
