--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,6 +139,19 @@
 
 	<h1 id="projectsTitle">Projects</h1>
 	</div>
+	
+	<section class="projects d-flex one">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?export=view&id=1orD2f4OU0JjPJEXeDH74KOmkdeszd1i4" alt="PanaMia"/>
+			<h2>Panamia Club</h2>
+			<p class="serif" style="margin-bottom:2px;"> May 2022 - </p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project I am working on in my spare time, to help local artists and small-businesses. I am building a platform with the main feature being a directory of local artists, and freelancers. Built with Next.js and MongoDB, deployed on Vercel.</p>
+			
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.panamia.club" target="_blank" class="view-button"> View Website </a>
+			</div>
+		</div>
+	</section>
 
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
