--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,7 +144,7 @@
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?export=view&id=1orD2f4OU0JjPJEXeDH74KOmkdeszd1i4" alt="PanaMia"/>
 			<h2>Panamia Club</h2>
-			<p class="serif" style="margin-bottom:2px;"> May 2022 - </p>
+			<p class="serif" style="margin-bottom:2px;"> October 2022 - </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project I am working on in my spare time, to help local artists and small-businesses. I am building a platform with the main feature being a directory of local artists, and freelancers. Built with Next.js and MongoDB, deployed on Vercel.</p>
 			
 			<div class="row" style="margin-bottom:5px;">
@@ -189,8 +189,8 @@
 
 
 	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/002/018/361/datas/medium.png" alt="Alphabet Spaces"/>
+		<div class="project justify-content-center align-self-center"> 
+			<img src="https://drive.google.com/uc?export=view&id=13Lf9QtDlznjUYUEFsxt5trDPA7UYXvff" alt="Alphabet Spaces"/>
 			<h2>Alphabet Spaces</h2>
 			<p class="serif" style="margin-bottom:2px;"> Jun 2022 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For <a href="https://pridehacksii.devpost.com/">MLH Pride Hacks 2</a>, I built a decentralized social media platform for LGBTQ+ people to find Safe Spaces and meet other people in the community. Users and followers functionality is handled by DeSo, Spaces are handled in firebase, and the front-end is React. Won the Prize for Best Use of <a href="https://www.deso.org/">DeSo.</a></p>
