--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,8 +115,9 @@
 						</div>
 						<div class="col-10">
 							<div class="about-cont" >
-								<p class="bottom-margin" id="aboutText">genesisbarrios:~$</p>
-								<p class="bottom-margin" id="aboutText2"></p>
+								<p class="bottom-margin" id="aboutText">genesisbarrios:~$ cd genesisbarrios/About </p>
+								<p class="bottom-margin" id="aboutTextcont">genesisbarrios:~$ cat about.txt</p>
+								<p class="bottom-margin" id="aboutText2">genesisbarrios:~$ Hello! My name is Genesis Barrios.\r\nI'm a Software Engineer based in Miami, Florida. 🌴 </p>
 							</div>
 						</div>
 						<div class="col-1">
