--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,13 @@
 							<div class="about-cont" >
 								<p class="bottom-margin" id="aboutText">genesisbarrios:~$ cd genesisbarrios/About </p>
 								<p class="bottom-margin" id="aboutTextcont">genesisbarrios:~$ cat about.txt</p>
-								<p class="bottom-margin" id="aboutText2">genesisbarrios:~$ Hello! My name is Genesis Barrios.\r\nI'm a Software Engineer based in Miami, Florida. 🌴 </p>
+								<p class="bottom-margin" id="aboutText2">Hello! My name is Genesis Barrios.\r\nI'm a Software Engineer based in Miami, Florida. 🌴 </p>
+								<p class="bottom-margin">I got my Bachelor's of Science in Computer Science in Spring of 2020 from Florida International University.</p>
+								<p class="bottom-margin">I am currently working as an Associate Software Engineer where I build and support applications in the Azure cloud.</p>
+								<p class="bottom-margin">I'm a Full Stack Engineer having worked with various technologies including Javascript, JQuery, Angular, React,</p>
+								<p class="bottom-margin"> Node.js, MongoDB, Firebase, SQL, MySQL, MicrosoftSQL, Tomcat, Java, C#, .NET, Swift, Web GL(Babylon.js, two.js), and Python.</p>
+								<p class="bottom-margin">I'm currently dedicating my free time to learning and building with Web3 technologies like Soldiity and Web3.js. I love building creative solutions</p>
+								<p class="bottom-margin">for myself and others, and I offer support through <a href='https://www.enigmasoftwareconsulting.com' style='color:white; font-weight:bold;' target='_blank'>Enigma Software Consulting.</a></p>
 							</div>
 						</div>
 						<div class="col-1">
