--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,7 @@
 							<div class="about-cont" >
 								<p class="bottom-margin" id="aboutText">genesisbarrios:~$ cd genesisbarrios/About </p>
 								<p class="bottom-margin" id="aboutTextcont">genesisbarrios:~$ cat about.txt</p>
-								<p class="bottom-margin" id="aboutText2">Hello! My name is Genesis Barrios.\r\nI'm a Software Engineer based in Miami, Florida. 🌴 </p>
+								<p class="bottom-margin" id="aboutText2">Hello! My name is Genesis Barrios. I'm a Software Engineer based in Miami, Florida. 🌴 </p>
 								<p class="bottom-margin">I got my Bachelor's of Science in Computer Science in Spring of 2020 from Florida International University.</p>
 								<p class="bottom-margin">I am currently working as an Associate Software Engineer where I build and support applications in the Azure cloud.</p>
 								<p class="bottom-margin">I'm a Full Stack Engineer having worked with various technologies including Javascript, JQuery, Angular, React,</p>
